--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://tanujabameta.github.io/autoComplete/",
   "name": "auto_complete_textbox",
   "version": "0.1.0",
   "private": true,
@@ -30,5 +31,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0",
+    
+
   }
 }
